--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,9 +7,22 @@
     tools:context=".MainActivity">
 
     <ListView
+        android:id="@+id/product_list"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/product_list">
-    </ListView>
+        app:layout_constraintTop_toBottomOf="@+id/clearButton"
+        tools:layout_editor_absoluteX="-16dp"></ListView>
+
+    <Button
+        android:id="@+id/clearButton"
+        style="@android:style/Widget.DeviceDefault.Button"
+        android:layout_width="153dp"
+        android:layout_height="53dp"
+        android:background="@color/colorPrimary"
+        android:backgroundTint="#0B500E"
+        android:text="Clear"
+        android:textColor="#FFDB04"
+        tools:layout_editor_absoluteX="33dp"
+        tools:layout_editor_absoluteY="11dp" />
 
 </android.support.constraint.ConstraintLayout>
