-Ändrat utseende på startsida -Tagit bort checkbox -Lagt till två stycken knappar -Koppla ena knappen till att visa en dialog och sedan stänga av appen -Koppla andra knappen till att gå vidare till mainactivity

--- a/app/src/main/res/layout/activity_first_activity.xml
+++ b/app/src/main/res/layout/activity_first_activity.xml
@@ -6,30 +6,90 @@
     android:layout_height="match_parent"
     tools:context=".first_activity">
 
-    <CheckBox
-        android:id="@+id/checkBox_one"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="24sp"
+    <Button
+        android:id="@+id/button_older_than_20"
+        android:layout_width="260dp"
+        android:layout_height="100dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:backgroundTint="#4B9560"
+        android:text="Jag är 20 år eller äldre"
+        android:textColor="#F2F2F2"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.942" />
+
+
+    <Button
+        android:id="@+id/button_younger_than_20"
+        android:layout_width="260dp"
+        android:layout_height="100dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:backgroundTint="#4B9560"
+        android:text="Jag är under 20 år"
+        android:textColor="#F2F2F2"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.741" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="330dp"
+        android:layout_height="120dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_systembolaget_logo" />
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="364dp"
+        android:layout_width="279dp"
         android:layout_height="59dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="          Är du 20 år eller äldre? Bekräfta genom att kryssa i rutan."
-        android:textSize="24sp"
+        android:fontFamily="sans-serif-light"
+        android:lineSpacingExtra="14sp"
+        android:text="20 år eller äldre?"
+        android:textAlignment="center"
+        android:textAllCaps="false"
+        android:textColor="#3A3A3A"
+        android:textSize="30sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.489"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.394" />
+        app:layout_constraintVertical_bias="0.301" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="333dp"
+        android:layout_height="149dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:fontFamily="sans-serif-light"
+        android:text="Denna applikation innehåller information om alkoholdrycker. För inköp och besök på denna applikation måste du vara 20 år eller äldre."
+        android:textColor="#3A3A3A"
+        android:textSize="22sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.628"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
