-Ändrat utseende på startsida -Tagit bort checkbox -Lagt till två stycken knappar -Koppla ena knappen till att visa en dialog och sedan stänga av appen -Koppla andra knappen till att gå vidare till mainactivity

--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -6,22 +6,26 @@
     <TextView
         android:id="@+id/product_name"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textSize="24sp" />
 
     <TextView
         android:id="@+id/product_volume"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textSize="24sp" />
 
     <TextView
         android:id="@+id/product_price"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textSize="24sp" />
 
     <TextView
         android:id="@+id/product_alcohol"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textSize="24sp" />
 
 
 </LinearLayout>
