--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#FBF0C4"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/product_name"
@@ -25,6 +27,7 @@
         android:id="@+id/product_alcohol"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#CAE1D0"
         android:textSize="24sp" />
 
 
