--- a/app/src/main/res/layout/activity_first_activity.xml
+++ b/app/src/main/res/layout/activity_first_activity.xml
@@ -15,7 +15,7 @@
         android:layout_marginEnd="8dp"
         android:backgroundTint="#CAE1D0"
         android:text="Jag är 20 år eller äldre"
-        android:textColor="#F2F2F2"
+        android:textColor="#101010"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -33,7 +33,7 @@
         android:layout_marginEnd="8dp"
         android:backgroundTint="#CAE1D0"
         android:text="Jag är under 20 år"
-        android:textColor="#F2F2F2"
+        android:textColor="#131313"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
