--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,14 +20,12 @@
         style="@android:style/Widget.DeviceDefault.Button"
         android:layout_width="506dp"
         android:layout_height="35dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
         android:background="@color/colorPrimary"
         android:backgroundTint="#EDFBF0C4"
         android:text="Rensa sökfält"
         android:textColor="#111110"
-        app:layout_constraintBottom_toTopOf="@+id/product_list"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageButton
