--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,15 +41,16 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:background="@drawable/foreground_search_button"
+        android:background="#00FFFFFF"
         android:clickable="true"
+        android:icon="@drawable/ic_icons8_search"
         android:onClick="serchButtonOnClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/clearButton"
-        app:layout_constraintVertical_bias="0.859"
+        app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@android:drawable/ic_search_category_default" />
 
 </android.support.constraint.ConstraintLayout>
