Fixat ett constraint lista mot rensa sökfält knappen Ändrat färg på rensa sökfält knapp

--- a/app/src/main/res/layout/activity_first_activity.xml
+++ b/app/src/main/res/layout/activity_first_activity.xml
@@ -50,10 +50,10 @@
         android:layout_marginTop="28dp"
         android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_systembolaget_logo" />
+        app:srcCompat="@drawable/ic_resurs_1" />
 
     <TextView
         android:id="@+id/textView"
